skip inforequest notification feature until enhancement requirement in LPK-1506 is fulfilled

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1575,8 +1575,8 @@
 "auth-admin.email-notifications.info" "sv" "Du kan tillägga fler än en e-postadresser genom att separera dem med semikolon (t.ex. matti@example.com; teppo@example.com)"
 "auth-admin.email-notifications.neighbor" "fi" "Kunnan halutaan hoitavan naapurien kuuleminen tai tiedotus"
 "auth-admin.email-notifications.neighbor" "sv" "Kommunen förväntas ombesörja hörandet av eller informationen till grannarna"
-"auth-admin.email-notifications.inforequest-and-submit" "fi" "Neuvontapyyntö vastaanotettu / Hakemus jätetty"
-"auth-admin.email-notifications.inforequest-and-submit" "sv" "Rådgivningsbegäran mottagen / Ansökan lämnad"
+"auth-admin.email-notifications.inforequest-and-submit" "fi" "Hakemus jätetty"
+"auth-admin.email-notifications.inforequest-and-submit" "sv" "Ansökan lämnad"
 "auth-admin.email-notifications.param-name" "fi" "Tapahtuma"
 "auth-admin.email-notifications.param-name" "sv" "Skeende"
 "auth-admin.email-notifications.param-value" "fi" "Sähköpostiosoitteet"
