history - text changes

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1788,6 +1788,14 @@
 "caseFile.documentDate" "sv" "Start- eller inlämningsdatum"
 "caseFile.heading" "fi" "Käsittelyprosessi"
 "caseFile.heading" "sv" "Behandlingsprocessen"
+"caseFile.operation.statement.request" "fi" "Lausuntopyyntö tehty"
+"caseFile.operation.statement.request" "sv" ""
+"caseFile.operation.neighbor.request" "fi" "Naapurin kuuleminen tehty"
+"caseFile.operation.neighbor.request" "sv" ""
+"caseFile.operation.review.request" "fi" "Vaatimus"
+"caseFile.operation.review.request" "sv" ""
+"caseFile.operation.review" "fi" "Katselmus"
+"caseFile.operation.review" "sv" ""
 "choose" "fi" "Valitse…"
 "choose" "sv" "Välj…"
 "close" "fi" "Sulje"
@@ -4960,7 +4968,3 @@
 "attachment.archivability" "sv" "Filen lämpar sig för permanent lagring"
 "attachment.downloadOriginalVersion.info" "fi" "Tiedostoa on käännetty,"
 "attachment.downloadOriginalVersion.link" "fi" "lataa alkuperäinen versio."
-"caseFile.action.review-request" "fi" "Vaatimus katselmoinnista"
-"caseFile.action.review-request" "sv" ""
-"caseFile.action.review" "fi" "Katselmointi"
-"caseFile.action.review" "sv" ""
