Removed AA, A, B and C from Pätevyys- and Vaativuusluokka.

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -164,14 +164,14 @@
 "halkominen._group_label" "sv" "Klyvning av tomt eller fastighet"
 "hankkeen-kuvaus.hankkeenVaativuus._group_label" "fi" "Hankkeen vaativuus"
 "hankkeen-kuvaus.hankkeenVaativuus._group_label" "sv" "Projektets svårighetsgrad"
-"hankkeen-kuvaus.hankkeenVaativuus.A" "fi" "Vaativa (A)"
-"hankkeen-kuvaus.hankkeenVaativuus.A" "sv" "Krävande (A)"
-"hankkeen-kuvaus.hankkeenVaativuus.AA" "fi" "Poikkeuksellisen vaativa (AA)"
-"hankkeen-kuvaus.hankkeenVaativuus.AA" "sv" "Exceptionellt krävande (AA)"
-"hankkeen-kuvaus.hankkeenVaativuus.B" "fi" "Tavanomainen (B)"
-"hankkeen-kuvaus.hankkeenVaativuus.B" "sv" "Sedvanlig (B)"
-"hankkeen-kuvaus.hankkeenVaativuus.C" "fi" "Vähäinen (C)"
-"hankkeen-kuvaus.hankkeenVaativuus.C" "sv" "Ringa (C)"
+"hankkeen-kuvaus.hankkeenVaativuus.A" "fi" "Vaativa"
+"hankkeen-kuvaus.hankkeenVaativuus.A" "sv" "Krävande"
+"hankkeen-kuvaus.hankkeenVaativuus.AA" "fi" "Poikkeuksellisen vaativa"
+"hankkeen-kuvaus.hankkeenVaativuus.AA" "sv" "Exceptionellt krävande"
+"hankkeen-kuvaus.hankkeenVaativuus.B" "fi" "Tavanomainen"
+"hankkeen-kuvaus.hankkeenVaativuus.B" "sv" "Sedvanlig"
+"hankkeen-kuvaus.hankkeenVaativuus.C" "fi" "Vähäinen"
+"hankkeen-kuvaus.hankkeenVaativuus.C" "sv" "Ringa"
 "hankkeen-kuvaus.hankkeenVaativuus.ei tiedossa" "fi" "Ei tiedossa"
 "hankkeen-kuvaus.hankkeenVaativuus.ei tiedossa" "sv" "Inte känt"
 "hankkeen-kuvaus.hankkeenVaativuus.help" "fi" "Rakennusvalvontaviranomainen määrittää aina hankekohtaisesti rakennushankkeen sekä suunnittelutehtävien vaativuusluokan."
@@ -1272,14 +1272,14 @@
 "osapuoli.patevyys.patevyys" "sv" "Mer info om planerarens kompetens"
 "osapuoli.patevyys.patevyysluokka._group_label" "fi" "Suunnittelijan pätevyys"
 "osapuoli.patevyys.patevyysluokka._group_label" "sv" "Planerarens kompetens"
-"osapuoli.patevyys.patevyysluokka.A" "fi" "Vaativa (A)"
-"osapuoli.patevyys.patevyysluokka.A" "sv" "Krävande (A)"
-"osapuoli.patevyys.patevyysluokka.AA" "fi" "Poikkeuksellisen vaativa (AA)"
-"osapuoli.patevyys.patevyysluokka.AA" "sv" "Exceptionellt krävande (AA)"
-"osapuoli.patevyys.patevyysluokka.B" "fi" "Tavanomainen (B)"
-"osapuoli.patevyys.patevyysluokka.B" "sv" "Sedvanlig (B)"
-"osapuoli.patevyys.patevyysluokka.C" "fi" "Vähäinen (C)"
-"osapuoli.patevyys.patevyysluokka.C" "sv" "Ringa (C)"
+"osapuoli.patevyys.patevyysluokka.A" "fi" "Vaativa"
+"osapuoli.patevyys.patevyysluokka.A" "sv" "Krävande"
+"osapuoli.patevyys.patevyysluokka.AA" "fi" "Poikkeuksellisen vaativa"
+"osapuoli.patevyys.patevyysluokka.AA" "sv" "Exceptionellt krävande"
+"osapuoli.patevyys.patevyysluokka.B" "fi" "Tavanomainen"
+"osapuoli.patevyys.patevyysluokka.B" "sv" "Sedvanlig"
+"osapuoli.patevyys.patevyysluokka.C" "fi" "Vähäinen"
+"osapuoli.patevyys.patevyysluokka.C" "sv" "Ringa"
 "osapuoli.patevyys.patevyysluokka.ei tiedossa" "fi" "Ei tiedossa"
 "osapuoli.patevyys.patevyysluokka.ei tiedossa" "sv" "Inte känt"
 "osapuoli.patevyys.valmistumisvuosi" "fi" "Valmistumisvuosi"
@@ -1290,40 +1290,40 @@
 "osapuoli.patevyys-tyonjohtaja.kokemusvuodet" "sv" "Erfarenhet som år"
 "osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka._group_label" "fi" "Tehtävien vaativuus"
 "osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka._group_label" "sv" "Svårighetsgrad av uppgifter"
-"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.A" "fi" "Vaativa (A)"
-"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.A" "sv" "Krävande (A)"
-"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.AA" "fi" "Poikkeuksellisen vaativa (AA)"
-"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.AA" "sv" "Exceptionellt krävande (AA)"
-"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.B" "fi" "Tavanomainen (B)"
-"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.B" "sv" "Sedvanlig (B)"
-"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.C" "fi" "Vähäinen (C)"
-"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.C" "sv" "Ringa (C)"
+"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.A" "fi" "Vaativa"
+"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.A" "sv" "Krävande"
+"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.AA" "fi" "Poikkeuksellisen vaativa"
+"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.AA" "sv" "Exceptionellt krävande"
+"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.B" "fi" "Tavanomainen"
+"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.B" "sv" "Sedvanlig"
+"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.C" "fi" "Vähäinen"
+"osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.C" "sv" "Ringa"
 "osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.ei tiedossa" "fi" "Ei tiedossa"
 "osapuoli.patevyys-tyonjohtaja.patevyysvaatimusluokka.ei tiedossa" "sv" "Inte känt"
 "osapuoli.patevyys-tyonjohtaja.valmistumisvuosi" "fi" "Valmistumisvuosi"
 "osapuoli.patevyys-tyonjohtaja.valmistumisvuosi" "sv" "Utexamineringsår"
 "osapuoli.patevyysvaatimusluokka._group_label" "fi" "Tehtävien vaativuus"
 "osapuoli.patevyysvaatimusluokka._group_label" "sv" "Svårighetsgrad av uppgifter"
-"osapuoli.patevyysvaatimusluokka.A" "fi" "Vaativa (A)"
-"osapuoli.patevyysvaatimusluokka.A" "sv" "Krävande (A)"
-"osapuoli.patevyysvaatimusluokka.AA" "fi" "Poikkeuksellisen vaativa (AA)"
-"osapuoli.patevyysvaatimusluokka.AA" "sv" "Exceptionellt krävande (AA)"
-"osapuoli.patevyysvaatimusluokka.B" "fi" "Tavanomainen (B)"
-"osapuoli.patevyysvaatimusluokka.B" "sv" "Sedvanlig (B)"
-"osapuoli.patevyysvaatimusluokka.C" "fi" "Vähäinen (C)"
-"osapuoli.patevyysvaatimusluokka.C" "sv" "Ringa (C)"
+"osapuoli.patevyysvaatimusluokka.A" "fi" "Vaativa"
+"osapuoli.patevyysvaatimusluokka.A" "sv" "Krävande"
+"osapuoli.patevyysvaatimusluokka.AA" "fi" "Poikkeuksellisen vaativa"
+"osapuoli.patevyysvaatimusluokka.AA" "sv" "Exceptionellt krävande"
+"osapuoli.patevyysvaatimusluokka.B" "fi" "Tavanomainen"
+"osapuoli.patevyysvaatimusluokka.B" "sv" "Sedvanlig"
+"osapuoli.patevyysvaatimusluokka.C" "fi" "Vähäinen"
+"osapuoli.patevyysvaatimusluokka.C" "sv" "Ringa"
 "osapuoli.patevyysvaatimusluokka.ei tiedossa" "fi" "Ei tiedossa"
 "osapuoli.patevyysvaatimusluokka.ei tiedossa" "sv" "Inte känt"
 "osapuoli.suunnittelutehtavanVaativuusluokka._group_label" "fi" "Suunnittelutehtävän vaativuusluokka"
 "osapuoli.suunnittelutehtavanVaativuusluokka._group_label" "sv" "Planeringsuppgiftens svårighetsgrad"
-"osapuoli.suunnittelutehtavanVaativuusluokka.A" "fi" "Vaativa (A)"
-"osapuoli.suunnittelutehtavanVaativuusluokka.A" "sv" "Krävande (A)"
-"osapuoli.suunnittelutehtavanVaativuusluokka.AA" "fi" "Poikkeuksellisen vaativa (AA)"
-"osapuoli.suunnittelutehtavanVaativuusluokka.AA" "sv" "Exceptionellt krävande (AA)"
-"osapuoli.suunnittelutehtavanVaativuusluokka.B" "fi" "Tavanomainen (B)"
-"osapuoli.suunnittelutehtavanVaativuusluokka.B" "sv" "Sedvanlig (B)"
-"osapuoli.suunnittelutehtavanVaativuusluokka.C" "fi" "Vähäinen (C)"
-"osapuoli.suunnittelutehtavanVaativuusluokka.C" "sv" "Ringa (C)"
+"osapuoli.suunnittelutehtavanVaativuusluokka.A" "fi" "Vaativa"
+"osapuoli.suunnittelutehtavanVaativuusluokka.A" "sv" "Krävande"
+"osapuoli.suunnittelutehtavanVaativuusluokka.AA" "fi" "Poikkeuksellisen vaativa"
+"osapuoli.suunnittelutehtavanVaativuusluokka.AA" "sv" "Exceptionellt krävande"
+"osapuoli.suunnittelutehtavanVaativuusluokka.B" "fi" "Tavanomainen"
+"osapuoli.suunnittelutehtavanVaativuusluokka.B" "sv" "Sedvanlig"
+"osapuoli.suunnittelutehtavanVaativuusluokka.C" "fi" "Vähäinen"
+"osapuoli.suunnittelutehtavanVaativuusluokka.C" "sv" "Ringa"
 "osapuoli.suunnittelutehtavanVaativuusluokka.ei tiedossa" "fi" "Ei tiedossa"
 "osapuoli.suunnittelutehtavanVaativuusluokka.ei tiedossa" "sv" "Inte känt"
 "osapuoli.suoramarkkinointilupa" "fi" "Tietoja saa luovuttaa suoramarkkinointia sekä mielipide- ja markkinatutkimusta varten."
