Appeal UI progressing.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4804,6 +4804,21 @@
 "verdict.maaraykset.toteutusHetki" "sv" "Genomförandetidpunkt"
 "verdict.muutMaaraykset" "fi" "Muut lupamääräykset"
 "verdict.muutMaaraykset" "sv" "Andra tillståndsålägganden"
+"verdict.muutoksenhaku"  "fi" "Muutoksenhaku"
+"verdict.muutoksenhaku.kirjaa" "fi" "Kirjaa muutoksenhaku"
+"verdict.muutoksenhaku.info" "fi" "Kirjaa muutoksenhaku valitsemalla tyyppi, syöttämällä päivämäärä, tekijä(t) ja liitteet."
+"verdict.muutoksenhaku.tyyppi" "fi" "Tyyppi"
+"verdict.muutoksenhaku.tyyppi" "sv" "Typ"
+"verdict.muutoksenhaku.tekijat" "fi" "Tekijä(t)"
+"verdict.muutoksenhaku.tekijat.placeholder" "fi" "Kirjoita..."
+"verdict.muutoksenhaku.pvm" "fi" "Päivämääärä"
+"verdict.muutoksenhaku.pvm" "sv" "Datum"
+"verdict.muutoksenhaku.extra" "fi" "Lisätietoa"
+"verdict.muutoksenhaku.extra" "sv" "Tilläggsuppgifter"
+"verdict.muutoksenhaku.extra" "fi" "Lisätietoa"
+"verdict.muutoksenhaku.extra.placeholder" "fi" "Kirjoita tarvittaessa lisätietoja asiaan liittyen..."
+"verdict.muutoksenhaku.liitteet" "fi" "Liitetiedosto(t)"
+"verdict.muutoksenhaku.liitteet.info" "fi" "(Max. 1000Mt, PDF-, kuva-, Microsoft Office -, OpenOffice- tai ZIP-tiedosto)"
 "verdict.name" "fi" "Päätöksen antaja"
 "verdict.name" "sv" "Beslutsfattare"
 "verdict.official" "fi" "Lainvoimainen"
