--- a/resources/i18n/errors.txt
+++ b/resources/i18n/errors.txt
@@ -24,3 +24,7 @@
 "error.verdict-not-found" "sv" ""
 "error.invalid-appeal" "fi" "Virheellinen valitus"
 "error.invalid-appeal" "sv" ""
+"error.invalid-appeal-verdict" "fi" "Virheellinen valituspäätös"
+"error.invalid-appeal-verdict" "sv" ""
+"error.appeals-not-found" "fi" "Valituspäätöstä ei voi antaa, jos valituksia ei ole."
+"error.appeals-not-found" "sv" ""
