change create-appeal to upsert-appeal -> applies updates when appealId is give, else pushes new appeal to application

--- a/resources/i18n/errors.txt
+++ b/resources/i18n/errors.txt
@@ -28,3 +28,5 @@
 "error.invalid-appeal-verdict" "sv" ""
 "error.appeals-not-found" "fi" "Valituspäätöstä ei voi antaa, jos valituksia ei ole."
 "error.appeals-not-found" "sv" ""
+"error.unknown-appeal" "fi" "Valitusta ei löytynyt"
+"error.unknown-appeal" "sv" ""
