Verdict appeal service work started.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4809,12 +4809,12 @@
 "verdict.muutoksenhaku.info" "fi" "Kirjaa muutoksenhaku valitsemalla tyyppi, syöttämällä päivämäärä, tekijä(t) ja liitteet."
 "verdict.muutoksenhaku.tyyppi" "fi" "Tyyppi"
 "verdict.muutoksenhaku.tyyppi" "sv" "Typ"
-"verdict.muutoksenhaku.paatos" "fi" "Päätös"
-"verdict.muutoksenhaku.paatos" "sv" "Beslut"
-"verdict.muutoksenhaku.valitus" "fi" "Valitus"
-"verdict.muutoksenhaku.valitus" "sv" "Besvärsanvisning"
-"verdict.muutoksenhaku.oikaisuvaatimus" "fi" "Oikaisuvaatimus"
-"verdict.muutoksenhaku.oikaisuvaatimus" "sv" "Rättelseyrkan"
+"verdict.muutoksenhaku.appealVerdict" "fi" "Päätös"
+"verdict.muutoksenhaku.appealVerdict" "sv" "Beslut"
+"verdict.muutoksenhaku.appeal" "fi" "Valitus"
+"verdict.muutoksenhaku.appeal" "sv" "Besvärsanvisning"
+"verdict.muutoksenhaku.rectification" "fi" "Oikaisuvaatimus"
+"verdict.muutoksenhaku.rectification" "sv" "Rättelseyrkan"
 "verdict.muutoksenhaku.tekijat" "fi" "Tekijä(t)"
 "verdict.muutoksenhaku.tekijat.placeholder" "fi" "Kirjoita..."
 "verdict.muutoksenhaku.pvm" "fi" "Päivämääärä"
