Appeals table work started.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4825,6 +4825,12 @@
 "verdict.muutoksenhaku.extra.placeholder" "fi" "Kirjoita tarvittaessa lisätietoja asiaan liittyen..."
 "verdict.muutoksenhaku.liitteet" "fi" "Liitetiedosto(t)"
 "verdict.muutoksenhaku.liitteet.info" "fi" "(Max. 100Mt, PDF-, kuva-, Microsoft Office -, OpenOffice- tai ZIP-tiedosto)"
+"verdict.muutoksenhaku.muokkaa" "fi" "Muokkaa"
+"verdict.muutoksenhaku.muokkaa" "sv" "Anpassa"
+"verdict.muutoksenhaku.poista" "fi" "Poista"
+"verdict.muutoksenhaku.poista" "sv" "Anpassa"
+"verdict.muutoksenhaku.show-extra" "fi" "Näytä lisätiedot"
+"verdict.muutoksenhaku.no-extra" "fi" "Ei lisätietoja."
 "verdict.name" "fi" "Päätöksen antaja"
 "verdict.name" "sv" "Beslutsfattare"
 "verdict.official" "fi" "Lainvoimainen"
