--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -316,8 +316,8 @@
 "application.map.help" "sv" "I den vy som öppnas kan du granska kartor som anknyter till projektet, till exempel flygbilder, general- och detaljplaner, kommunernas baskartor och andra kartnivåer som myndigheterna erbjuder. Du kan också se de general- och detaljplanebestämmelser som finns för området. Det material som är tillgängligt varierar från kommun till kommun. Du kan göra egna anteckningar och ritningar som du sparar på kartan, mäta avstånd och ytor samt skriva ut vyer i PDF-format."
 "application.mapActionOpen" "fi" "Piirrä kartalle"
 "application.mapActionOpen" "sv" "Rita på kartan"
-"application.markVerdictAttachments" "fi" "Merkitse päätöksen liitteet"
-"application.markVerdictAttachments" "sv" "Markera beslutets bilagor"
+"application.markVerdictAttachments" "fi" "Merkitse päätöksen tai toimenpiteen liitteet"
+"application.markVerdictAttachments" "sv" "Markera beslutets eller åtgärdens bilagor"
 "application.missingRequiredAttachments" "fi" "Puuttuvat pakolliset liitteet"
 "application.missingRequiredAttachments" "sv" "Saknande obligatoriska bilagor"
 "application.MM.neighbors" "fi" "Naapurien tiedotus"
@@ -734,8 +734,8 @@
 "attachment.label.scale" "sv" "Skala av ritning"
 "attachment.label.size" "fi" "Piirustuksen koko"
 "attachment.label.size" "sv" "Storlek av ritning"
-"attachment.label.verdictAttachment" "fi" "Päätöksen liite"
-"attachment.label.verdictAttachment" "sv" "Beslutets bilaga"
+"attachment.label.verdictAttachment" "fi" "Päätöksen tai toimenpiteen liite"
+"attachment.label.verdictAttachment" "sv" "Beslutets eller åtgärdens bilaga"
 "attachment.legend.error" "fi" "Puuttuva tai muutoksia vaativa liite"
 "attachment.legend.error" "sv" "Bilaga som är bristfällig eller som kräver ändringar"
 "attachment.legend.ok" "fi" "Viranomainen on alustavasti hyväksynyt, että liite on asianmukainen kyseessä olevaan hakemukseen. Varsinainen hyväksyntä annetaan myöhemmin luvan virallisessa käsittelyssä."
@@ -794,8 +794,8 @@
 "attachment.upload.instructions.size" "sv" "Största tillåtna filstorlek är 100 Mb."
 "attachment.valid-pdfa" "fi" "Validi PDF/A-tiedosto"
 "attachment.valid-pdfa" "sv" "Giltig PDF/A-fil"
-"attachment.verdict-attachment" "fi" "Päätöksen liite"
-"attachment.verdict-attachment" "sv" "Beslutets bilaga"
+"attachment.verdict-attachment" "fi" "Päätöksen tai toimenpiteen liite"
+"attachment.verdict-attachment" "sv" "Beslutets eller åtgärdens bilaga"
 "attachment.version" "fi" "Versio"
 "attachment.version" "sv" "Version"
 "attachment.versionHistory" "fi" "Versiohistoria"
@@ -4964,8 +4964,8 @@
 "verdict-attachment-prints-order.order-dialog.address" "sv" "Byggplats"
 "verdict-attachment-prints-order.order-dialog.applicantName" "fi" "Hakijan nimi"
 "verdict-attachment-prints-order.order-dialog.applicantName" "sv" "Sökandens namn"
-"verdict-attachment-prints-order.order-dialog.description" "fi" "Seuraavat päätöksen liitteiksi merkityt suunnitelmat lähetetään kopiolaitokselle tulostettavaksi:"
-"verdict-attachment-prints-order.order-dialog.description" "sv" "Följande planer som är märkta som bilagor av beslutet skickas till kopieringstjänst för utskrivning:"
+"verdict-attachment-prints-order.order-dialog.description" "fi" "Seuraavat päätöksen tai toimenpiteen liitteiksi merkityt suunnitelmat lähetetään kopiolaitokselle tulostettavaksi:"
+"verdict-attachment-prints-order.order-dialog.description" "sv" "Följande planer som är märkta som bilagor av beslutet eller åtgärden skickas till kopieringstjänst för utskrivning:"
 "verdict-attachment-prints-order.order-dialog.kuntalupatunnus" "fi" "Lupatunnus"
 "verdict-attachment-prints-order.order-dialog.kuntalupatunnus" "sv" "Tillståndsbeteckning"
 "verdict-attachment-prints-order.order-dialog.legend.application" "fi" "Hakemustiedot"
@@ -4996,14 +4996,14 @@
 "verdict-attachment-prints-order.order-dialog.submit" "sv" "Beställ"
 "verdict-attachment-prints-order.order-dialog.title" "fi" "Lupakuvien tilaaminen kopiolaitokselta"
 "verdict-attachment-prints-order.order-dialog.title" "sv" "Beställning av lovritningar från kopieringstjänst"
-"verdict-attachment-prints-order.verdict-attachments-selected" "fi" "Et voi tilata lupakuvia, ellet ole valinnut yhtään päätöksen liitettä"
-"verdict-attachment-prints-order.verdict-attachments-selected" "sv" "Du kan inte beställa lovritningar om du inte valt en beslutsbilaga."
-"verdict-attachment-prints-order-history.dialog.description" "fi" "Seuraavat päätöksen liitteiksi merkityt suunnitelmat on lähetetty kopiolaitokselle tulostettavaksi:"
-"verdict-attachment-prints-order-history.dialog.description" "sv" "Följande planer som markerats som bilagor till beslutet har skickats till reprotjänsten för att skrivas ut:"
+"verdict-attachment-prints-order.verdict-attachments-selected" "fi" "Et voi tilata lupakuvia, ellet ole valinnut yhtään päätöksen tai toimenpiteen liitettä"
+"verdict-attachment-prints-order.verdict-attachments-selected" "sv" "Du kan inte beställa lovritningar om du inte valt en besluts- eller åtgärdensbilaga."
+"verdict-attachment-prints-order-history.dialog.description" "fi" "Seuraavat päätöksen tai toimenpiteen liitteiksi merkityt suunnitelmat on lähetetty kopiolaitokselle tulostettavaksi:"
+"verdict-attachment-prints-order-history.dialog.description" "sv" "Följande planer som markerats som bilagor till beslutet eller åtgärden har skickats till reprotjänsten för att skrivas ut:"
 "verdict-attachment-prints-order-history.dialog.title" "fi" "Lupakuvien tilaushistoria"
 "verdict-attachment-prints-order-history.dialog.title" "sv" "Orderhistorik för lovritningar"
-"verdict-attachments-multiselect.mark-selected-as-verdict-attachments" "fi" "Merkitse valitut päätöksen liitteiksi"
-"verdict-attachments-multiselect.mark-selected-as-verdict-attachments" "sv" "Markera valda som bilagor till beslutet"
+"verdict-attachments-multiselect.mark-selected-as-verdict-attachments" "fi" "Merkitse valitut päätöksen tai toimenpiteen liitteiksi"
+"verdict-attachments-multiselect.mark-selected-as-verdict-attachments" "sv" "Markera valda som bilagor till beslutet eller åtgärden"
 "verdict-attachments-multiselect.select-all" "fi" "Valitse kaikki"
 "verdict-attachments-multiselect.select-all" "sv" "Välj alla"
 "verdict-attachments-multiselect.select-none" "fi" "Poista kaikki valinnat"
