moved schema localizations, added missing

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -4224,6 +4224,12 @@
 "ranta-asemakaava-muutos._group_label" "sv" "Stranddetaljplanändring"
 "schemas.hakija" "fi" "Hakija"
 "schemas.hakija" "sv" "Sökande"
+"schemas.hakija-r" "fi" "Hakija (hankkeeseen ryhtyvä)"
+"schemas.hakija-r" "sv" "Sökande (åtar sig projektet)"
+"schemas.hakija-ya" "fi" "Hakija"
+"schemas.hakija-ya" "sv" "Sökande"
+"schemas.ilmoittaja" "fi" "Ilmoittaja"
+"schemas.ilmoittaja" "sv" "Anmälare"
 "schemas.maksaja" "fi" "Luvan maksaja"
 "schemas.maksaja" "sv" "Betalare"
 "schemas.paasuunnittelija" "fi" "Pääsuunnittelija"
