Translations and code fixes.
Bug fix: pre-check for adding an appealVerdict to a verdict without
appeals.
CSS fix: appeal files in the appeals table.
More robot tests.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -100,8 +100,8 @@
 "answered" "sv" "Besvarad"
 "answered.title" "fi" "Vastattu"
 "answered.title" "sv" "Besvarad"
-"appealed" "fi" "Valitettu"
-"appealed" "sv" "Överklagat"
+"appealed" "fi" "Muutoksenhaussa"
+"appealed" "sv" "I ändringssökan"
 "appealed.title" "fi" ""
 "appealed.title" "sv" ""
 "applicant" "fi" "Hakija"
@@ -846,10 +846,10 @@
 "attachmentType.ennakkoluvat_ja_lausunnot.suunnittelutarveratkaisu.info" "sv" "Om man har ansökt om planeringsbehovsavgörande på annat sätt än via Lupapiste"
 "attachmentType.ennakkoluvat_ja_lausunnot.ymparistolupa.info" "fi" "Jos hankkeeseen on haettu ympäristölupa muuten kuin Lupapisteen kautta"
 "attachmentType.ennakkoluvat_ja_lausunnot.ymparistolupa.info" "sv" "Om man har ansökt om miljötillstånd i projektet på annat sätt än via Lupapiste"
-"attachmentType.ennakkoluvat_ja_lausunnot.lausunto.info!" "fi" "Jos asiaan liittyen on annettu lausunto"
-"attachmentType.ennakkoluvat_ja_lausunnot.lausunto.info!" "sv" "Om ett utlåtande getts om projektet"
-"attachmentType.ennakkoluvat_ja_lausunnot.ennakkoneuvottelumuistio.info!" "fi" "Jos hankkeesta on pidetty ennakkoneuvottelu"
-"attachmentType.ennakkoluvat_ja_lausunnot.ennakkoneuvottelumuistio.info!" "sv" ""
+"attachmentType.ennakkoluvat_ja_lausunnot.lausunto.info" "fi" "Jos asiaan liittyen on annettu lausunto"
+"attachmentType.ennakkoluvat_ja_lausunnot.lausunto.info" "sv" "Ifall det har getts ett utlåtande angående saken"
+"attachmentType.ennakkoluvat_ja_lausunnot.ennakkoneuvottelumuistio.info" "fi" "Jos hankkeesta on pidetty ennakkoneuvottelu"
+"attachmentType.ennakkoluvat_ja_lausunnot.ennakkoneuvottelumuistio.info" "sv" "Om det har hållits en förhandsförhandling om projektet"
 "attachmentType.ennakkoluvat_ja_lausunnot.vesi_ja_viemariliitoslausunto_tai_kartta.info" "fi" "Jos hankkeessa liitytään olemassa olevaan tai rakenteilla olevaan verkostoon"
 "attachmentType.ennakkoluvat_ja_lausunnot.vesi_ja_viemariliitoslausunto_tai_kartta.info" "sv" "Om man i projektet anslutar sig till ett existerande nätverk eller till ett under byggande"
 "attachmentType.ennakkoluvat_ja_lausunnot.paatos_ajoliittymasta.info" "fi" "Jos hankkeessa muutetaan tai rakennetaan uusi ajoliittymä ELY:n hallinnoimalle tielle"
@@ -858,13 +858,13 @@
 "attachmentType.ennakkoluvat_ja_lausunnot.johtokartta.info" "sv" "När ledningar eller rör utplacerats på byggområdet. Exempelvis i åtgärdstillstånd för jordvärme"
 "attachmentType.ennakkoluvat_ja_lausunnot.maanalaisten_johtojen_sijaintiselvitys.info" "fi" "Kun rakentamisen alueella on sijoitettuna johtoja tai putkia. Esimerkiksi maalämpöluvissa."
 "attachmentType.ennakkoluvat_ja_lausunnot.maanalaisten_johtojen_sijaintiselvitys.info" "sv" "När ledningar eller rör utplacerats på byggområdet. Exempelvis i åtgärdstillstånd för jordvärme"
-"attachmentType.hakija.osakeyhtion_perustamiskirja.info!" "fi" "Jos tarvitaan allekirjoitusoikeuden osoittamiseen (hallinta tai omistus)"
-"attachmentType.hakija.osakeyhtion_perustamiskirja.info!" "sv" "Ifall besittningsrätten behöver styrkas"
+"attachmentType.hakija.osakeyhtion_perustamiskirja.info" "fi" "Jos tarvitaan allekirjoitusoikeuden osoittamiseen (hallinta tai omistus)"
+"attachmentType.hakija.osakeyhtion_perustamiskirja.info" "sv" "Om det behövs för styrkande av underteckningsrätt (innehav eller ägande)"
 "attachmentType.hakija.ote_asunto_osakeyhtion_hallituksen_kokouksen_poytakirjasta.info!" "fi" "Jos tarvitaan allekirjoitusoikeuden osoittamiseen (hallinta tai omistus)"
 "attachmentType.hakija.ote_kauppa_ja_yhdistysrekisterista.info!" "fi" "Jos tarvitaan allekirjoitusoikeuden osoittamiseen (hallinta tai omistus)"
-"attachmentType.hakija.ote_kauppa_ja_yhdistysrekisterista.info!" "sv" "Ifall besittningsrätten behöver styrkas"
-"attachmentType.hakija.valtakirja.info!" "fi" "Jos hakemuksen tekee joku muu kuin hakija itse"
-"attachmentType.hakija.valtakirja.info!" "sv" "Om sökanden eller annan part i projektet inte har Lupapistes fullmakt"
+"attachmentType.hakija.ote_kauppa_ja_yhdistysrekisterista.info" "sv" "Om det behövs för styrkande av underteckningsrätt (innehav eller ägande)"
+"attachmentType.hakija.valtakirja.info" "fi" "Jos hakemuksen tekee joku muu kuin hakija itse"
+"attachmentType.hakija.valtakirja.info" "sv" "Om ansökan görs av någon annan än sökanden själv"
 "attachmentType.osapuolet.cv.info" "fi" "Jos henkilön pätevyys tulee esittää"
 "attachmentType.osapuolet.cv.info" "sv" "Om persons kompetens måste visas"
 "attachmentType.osapuolet.patevyystodistus.info" "fi" "Jos henkilön pätevyys tulee esittää"
@@ -921,8 +921,8 @@
 "attachmentType.rakennuspaikka.tonttikartta_tarvittaessa.info" "sv" "Tomtkartan måste levereras när myndigheten kräver"
 "attachmentType.rakennuspaikka.selvitys_rakennuspaikan_korkeusasemasta.info" "fi" "Uudisrakennushankkeessa tai jos tehdään merkittäviä pihaan kohdistuvia muutoksia"
 "attachmentType.rakennuspaikka.selvitys_rakennuspaikan_korkeusasemasta.info" "sv" "Vid nybyggnadprojet eller om man gör betydande ändringar som gäller gården"
-"attachmentType.selvitykset.yhteistilat.info!" "fi" "Jos hankkeeseen liittyy asuinkerrostalon tai rivitalon yhteistiloja"
-"attachmentType.selvitykset.yhteistilat.info!" "sv" "Om utrymmen av vånings- eller radhus anknyter till projektet"
+"attachmentType.selvitykset.yhteistilat.info" "fi" "Jos hankkeeseen liittyy asuinkerrostalon tai rivitalon yhteistiloja"
+"attachmentType.selvitykset.yhteistilat.info" "sv" "Om det hör gemensamma utrymmen i bostadshöghus eller radhus till projektet"
 "attachmentType.selvitykset.energiataloudellinen_selvitys.info" "fi" "Aina uudisrakennus-, korjaus- ja muutoshankkeissa"
 "attachmentType.selvitykset.energiataloudellinen_selvitys.info" "sv" "Alltid i nybyggnads-, reparations- och ombyggnadsprojekt"
 "attachmentType.selvitykset.energiatodistus.info" "fi" "Aina uudisrakennushankkeissa (yli 50m2)"
@@ -1978,13 +1978,13 @@
 "caseFile.heading" "fi" "Käsittelyprosessi"
 "caseFile.heading" "sv" "Behandlingsprocessen"
 "caseFile.operation.statement.request" "fi" "Lausuntopyyntö tehty"
-"caseFile.operation.statement.request" "sv" ""
+"caseFile.operation.statement.request" "sv" "Begäran om utlåtande gjort"
 "caseFile.operation.neighbor.request" "fi" "Naapurin kuuleminen tehty"
-"caseFile.operation.neighbor.request" "sv" ""
+"caseFile.operation.neighbor.request" "sv" "Hörande av grannen gjort"
 "caseFile.operation.review.request" "fi" "Vaatimus"
-"caseFile.operation.review.request" "sv" ""
+"caseFile.operation.review.request" "sv" "Krav"
 "caseFile.operation.review" "fi" "Katselmus"
-"caseFile.operation.review" "sv" ""
+"caseFile.operation.review" "sv" "Syn"
 "choose" "fi" "Valitse…"
 "choose" "sv" "Välj…"
 "close" "fi" "Sulje"
@@ -2336,6 +2336,7 @@
 "error.illegal-shapefile" "fi" "Vain pakattu zip-tiedosto on sallittu. Ole hyvä ja toimita alueet zip-tiedoston sisällä."
 "error.illegal-shapefile" "sv" "Endast zip-packade dokument godkänns. Var så god och leverera områdena inom ett zip-dokument."
 "error.illegal-state" "fi" "Hakemusta ei voi siirtää annettuun tilaan."
+"error.illegal-state" "sv" "Ansökan kan inte flyttas till det angivna läget."
 "error.illegal-subtype" "fi" "Tuntematon tietotyyppi"
 "error.illegal-subtype" "sv" "Okänd uppgiftstyp"
 "error.illegal-tel" "fi" "Puhelinnumeron muoto on väärä"
@@ -4758,9 +4759,10 @@
 "verdict.autopaikkojaUlkopuolella" "sv" "Anta parkeringsplatser utanför"
 "verdict.autopaikkojaVahintaan" "fi" "Autopaikkoja vähintään"
 "verdict.autopaikkojaVahintaan" "sv" "Parkeringsplatser minst"
-"verdict.confirmdelete" "fi" "Haluatko varmasti poistaa päätöksen ja tähän päätökseen liittyvät liitteet, valmistelumerkinnät, lupaehdot ja määräykset Lupapisteestä?"
-"verdict.confirmdelete" "sv" "Är du säker på att du vill ta bort beslutet och de bilagor, uppgifter om beredningen, tillståndsvillkor och bestämmelser som hör till detta beslut från Lupapiste?"
+"verdict.confirmdelete" "fi" "Haluatko varmasti poistaa päätöksen ja tähän päätökseen liittyvät liitteet, valmistelumerkinnät, lupaehdot, määräykset ja muutoksenhaun Lupapisteestä?"
+"verdict.confirmdelete" "sv" "Är du säker på att du vill ta bort beslutet och de bilagor, uppgifter om beredningen, tillståndsvillkor, bestämmelser och ändringssökan som hör till detta beslut från Lupapiste?"
 "verdict.confirmfetch" "fi" "Haluatko varmasti hakea uudet päätöstiedot? Tämän jälkeen joudut kirjaamaan kaikki muutoksenhaut uudestaan."
+"verdict.confirmfetch" "sv" "Är du säker på att du vill hämta nya beslutsuppgifter? Efter det måste du fylla i alla ändringssökningar på nytt."
 "verdict.confirmpublish" "fi" "Haluatko varmasti julkaista päätöksen? Toimintoa ei voi perua. Hakemuksen osapuolet saavat päätöksestä sähköposti-ilmoituksen."
 "verdict.confirmpublish" "sv" "Är du säker på att du vill publicera beslutet? Åtgärden går inte att ångra. Ansökans parter får ett e-postmeddelande om beslutet."
 "verdict.conversation" "fi" "Valmistelumerkinnät"
@@ -4802,8 +4804,11 @@
 "verdict.muutMaaraykset" "fi" "Muut lupamääräykset"
 "verdict.muutMaaraykset" "sv" "Andra tillståndsålägganden"
 "verdict.muutoksenhaku"  "fi" "Muutoksenhaku"
+"verdict.muutoksenhaku" "sv" "Ändringssökan"
 "verdict.muutoksenhaku.kirjaa" "fi" "Kirjaa muutoksenhaku"
+"verdict.muutoksenhaku.kirjaa" "sv" "Fyll i ändringssökan"
 "verdict.muutoksenhaku.info" "fi" "Kirjaa muutoksenhaku valitsemalla tyyppi, syöttämällä päivämäärä, tekijä(t) ja liitteet."
+"verdict.muutoksenhaku.info" "sv" "Fyll i ändringssökan genom att välja typ, mata in datum, aktör(er) och bilagor."
 "verdict.muutoksenhaku.tyyppi" "fi" "Tyyppi"
 "verdict.muutoksenhaku.tyyppi" "sv" "Typ"
 "verdict.muutoksenhaku.appealVerdict" "fi" "Päätös"
@@ -4813,21 +4818,28 @@
 "verdict.muutoksenhaku.rectification" "fi" "Oikaisuvaatimus"
 "verdict.muutoksenhaku.rectification" "sv" "Rättelseyrkan"
 "verdict.muutoksenhaku.tekijat" "fi" "Tekijä(t)"
+"verdict.muutoksenhaku.tekijat" "sv" "Aktör(er)"
 "verdict.muutoksenhaku.tekijat.placeholder" "fi" "Kirjoita..."
+"verdict.muutoksenhaku.tekijat.placeholder" "sv" "Skriv..."
 "verdict.muutoksenhaku.pvm" "fi" "Päivämääärä"
 "verdict.muutoksenhaku.pvm" "sv" "Datum"
 "verdict.muutoksenhaku.extra" "fi" "Lisätietoa"
 "verdict.muutoksenhaku.extra" "sv" "Tilläggsuppgifter"
 "verdict.muutoksenhaku.extra" "fi" "Lisätietoa"
 "verdict.muutoksenhaku.extra.placeholder" "fi" "Kirjoita tarvittaessa lisätietoja asiaan liittyen..."
+"verdict.muutoksenhaku.extra.placeholder" "sv" "Skriv vid behov tilläggsuppgifter gällande ärendet..."
 "verdict.muutoksenhaku.liitteet" "fi" "Liitetiedosto(t)"
+"verdict.muutoksenhaku.liitteet" "sv" "Bifogad(e) fil(er)"
 "verdict.muutoksenhaku.liitteet.info" "fi" "(Max. 100Mt, PDF-, kuva-, Microsoft Office -, OpenOffice- tai ZIP-tiedosto)"
+"verdict.muutoksenhaku.liitteet.info" "sv" "(Max. 100Mt, PDF-, bild-, Microsoft Office -, OpenOffice- eller ZIP-fil)"
 "verdict.muutoksenhaku.muokkaa" "fi" "Muokkaa"
 "verdict.muutoksenhaku.muokkaa" "sv" "Anpassa"
 "verdict.muutoksenhaku.poista" "fi" "Poista"
-"verdict.muutoksenhaku.poista" "sv" "Anpassa"
+"verdict.muutoksenhaku.poista" "sv" "Radera"
 "verdict.muutoksenhaku.show-extra" "fi" "Näytä lisätiedot"
+"verdict.muutoksenhaku.show-extra" "sv" "Visa tilläggsuppgifter"
 "verdict.muutoksenhaku.no-extra" "fi" "Ei lisätietoja."
+"verdict.muutoksenhaku.no-extra" "sv" "Inga tilläggsuppgifter."
 "verdict.name" "fi" "Päätöksen antaja"
 "verdict.name" "sv" "Beslutsfattare"
 "verdict.official" "fi" "Lainvoimainen"
@@ -5073,6 +5085,7 @@
 "error.startdate-before-enddate" "fi" "Alkupäivämäärä on ennen loppupäivämäärää"
 "error.startdate-before-enddate" "sv" "Startdatumet är före slutdatumet"
 "error.invalid-date" "fi" "Virheellinen päivämäärä"
+"error.invalid-date" "sv" "Felaktigt datum"
 "error.service-lockdown" "fi" "Palvelu on hetkellisesti lukutilassa ylläpitotoimien vuoksi. Voit selailla hakemuksia, mutta tietojen muokkaus on tilapäisesti estetty. Pahoittelemme häiriötä!"
 "error.service-lockdown" "sv" "Tjänsten är tillfälligt i läsläge på grund av uppdateringar. Du kan granska ansökningar, men ändringar i uppgifter kan inte göras för tillfället. Vi beklagar störningen!"
 "statement.draft-is-not-visible" "fi" "Lausunto tulee näkyviin tähän, kun se on annettu."
