Changed verdict.muutoksenhaku.info loc text

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4807,8 +4807,8 @@
 "verdict.muutoksenhaku" "sv" "Ändringssökan"
 "verdict.muutoksenhaku.kirjaa" "fi" "Kirjaa muutoksenhaku"
 "verdict.muutoksenhaku.kirjaa" "sv" "Fyll i ändringssökan"
-"verdict.muutoksenhaku.info" "fi" "Kirjaa muutoksenhaku valitsemalla tyyppi, syöttämällä päivämäärä, tekijä(t) ja liitteet."
-"verdict.muutoksenhaku.info" "sv" "Fyll i ändringssökan genom att välja typ, mata in datum, aktör(er) och bilagor."
+"verdict.muutoksenhaku.info" "fi" "Kirjaa muutoksenhaku valitsemalla tyyppi, syöttämällä päivämäärä, oikaisuvaatimuksen, valituksen tai päätöksen tekijä(t) ja liitteet."
+"verdict.muutoksenhaku.info" "sv" "Fyll i ändringssökan genom att välja typ, mata in datum, aktör(er) på rättelseyrkan, besvärsanvisning eller beslut och bilagor."
 "verdict.muutoksenhaku.tyyppi" "fi" "Tyyppi"
 "verdict.muutoksenhaku.tyyppi" "sv" "Typ"
 "verdict.muutoksenhaku.appealVerdict" "fi" "Päätös"
