--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1981,10 +1981,16 @@
 "caseFile.operation.statement.request" "sv" ""
 "caseFile.operation.neighbor.request" "fi" "Naapurin kuuleminen tehty"
 "caseFile.operation.neighbor.request" "sv" ""
-"caseFile.operation.review.request" "fi" "Vaatimus"
+"caseFile.operation.review.request" "fi" "Vaatimus lisätty"
 "caseFile.operation.review.request" "sv" ""
-"caseFile.operation.review" "fi" "Katselmus"
+"caseFile.operation.review" "fi" "Katselmus lisätty"
 "caseFile.operation.review" "sv" ""
+"caseFile.documentSubmitted" "fi" "Asiakirja lisätty"
+"caseFile.documentSubmitted" "sv" ""
+"caseFile.tosFunctionChange" "fi" "Tehtäväluokka asetettu"
+"caseFile.tosFunctionChange" "sv" ""
+"caseFile.event" "fi" "Tapahtuma"
+"caseFile.event" "sv" "Skeende"
 "choose" "fi" "Valitse…"
 "choose" "sv" "Välj…"
 "close" "fi" "Sulje"
@@ -5101,3 +5107,5 @@
 "attachment.downloadOriginalVersion.link" "sv" "ladda originalversionen."
 "state.application" "fi" "Hakemuksen tila:"
 "state.application" "sv" "Ansökans status:"
+"user" "fi" "Käyttäjä"
+"user" "sv" "Användare"
