--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1989,8 +1989,12 @@
 "caseFile.documentSubmitted" "sv" "Dokument tillsatt"
 "caseFile.tosFunctionChange" "fi" "Tehtäväluokka asetettu"
 "caseFile.tosFunctionChange" "sv" ""
+"caseFile.stateNotSet" "fi" "Ei asetettu tiedonohjaussuunnitelmassa"
+"caseFile.stateNotSet" "sv" ""
 "caseFile.event" "fi" "Tapahtuma"
 "caseFile.event" "sv" "Skeende"
+"caseFile.complementNeeded" "fi" "Palautettu täydennettäväksi"
+"caseFile.complementNeeded" "sv" ""
 "choose" "fi" "Valitse…"
 "choose" "sv" "Välj…"
 "close" "fi" "Sulje"
