--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -5126,3 +5126,5 @@
 "state.application" "sv" "Ansökans status:"
 "user" "fi" "Käyttäjä"
 "user" "sv" "Användare"
+"libre-conversion-error" "fi" "PDF/A-tiedoston luonti epäonnistui"
+"libre-conversion-error" "sv" ""
