--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4131,6 +4131,10 @@
 "reset.title" "sv" "Ändra lösenord"
 "rest-api" "fi" "Järjestelmäkäyttäjä"
 "rest-api" "sv" "Systemanvändare"
+"review.author" "fi" "Katselmuksen pitäjä"
+"review.condition" "fi" "Lupaehto"
+"review.show-notes" "fi" "Näytä huomautukset"
+"review.state" "fi" "Laji"
 "rotate-left" "fi" "Käännä vasemmalle"
 "rotate-left" "sv" "Vrid åt vänster"
 "rotate-over" "fi" "Käännä ylösalaisin"
