LPK-1601 Katselmuksen laji readonly. When creating katselmus katselmuksenLaji must be selected before creation.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -5132,3 +5132,5 @@
 "user" "sv" "Användare"
 "libre-conversion-error" "fi" "PDF/A-tiedoston luonti epäonnistui"
 "libre-conversion-error" "sv" ""
+"task.katselmuksenLaji-required" "fi" "Katselmuksen laji"
+"task.katselmuksenLaji-required" "sv" ""
