More fine-tuned CSS control for docgen.

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -4390,6 +4390,8 @@
 "talousvedet.riittavyys.vesi riittää talouden tarpeisiin" "sv" "Vattnet räcker för hushållets behov"
 "task-katselmus.katselmuksenLaji._group_label" "fi" "Katselmuksen laji"
 "task-katselmus.katselmuksenLaji._group_label" "sv" "Typ av syneförrättning"
+"task-katselmus.katselmuksenLaji" "fi" "Katselmuksen laji"
+"task-katselmus.katselmuksenLaji" "sv" "Typ av syneförrättning"
 "task-katselmus.katselmuksenLaji.aloituskokous" "fi" "Aloituskokous"
 "task-katselmus.katselmuksenLaji.aloituskokous" "sv" "Inledande möte"
 "task-katselmus.katselmuksenLaji.ei tiedossa" "fi" "Ei tiedossa"
@@ -4416,6 +4418,30 @@
 "task-katselmus.katselmus._group_label" "sv" "Uppgifter om syneförrättningen"
 "task-katselmus.katselmus.huomautukset._group_label" "fi" "Huomautukset"
 "task-katselmus.katselmus.huomautukset._group_label" "sv" "Anmärkningar"
+"task-katselmus.huomautukset" "fi" "Huomautukset"
+"task-katselmus.huomautukset" "sv" "Anmärkningar"
+"task-katselmus.kuvaus" "fi" "Huomautettavaa"
+"task-katselmus.kuvaus" "sv" "Anmärkningsvärt"
+"task-katselmus.maaraAika" "fi" "Määräaika"
+"task-katselmus.maaraAika" "sv" "Bestämd tid"
+"task-katselmus.toteaja" "fi" "Toteaja"
+"task-katselmus.toteaja" "sv" "Person som kontaterar att granskning utförts"
+"task-katselmus.toteamisHetki" "fi" "Toteamishetki"
+"task-katselmus.toteamisHetki" "sv" "Tid för konstaterande"
+"task-katselmus.lasnaolijat" "fi" "Läsnäolijat"
+"task-katselmus.lasnaolijat" "sv" "De närvarande"
+"task-katselmus.pitaja" "fi" "Katselmuksen pitäjä"
+"task-katselmus.pitaja" "sv" "Personen som utför synen"
+"task-katselmus.pitoPvm" "fi" "Pitopäivä"
+"task-katselmus.pitoPvm" "sv" "Dag för hållande"
+"task-katselmus.poikkeamat" "fi" "Poikkeamat"
+"task-katselmus.poikkeamat" "sv" "Avvikanden"
+"task-katselmus.tila" "fi" "Koko katselmuksen tila"
+"task-katselmus.tila" "sv" "Hela syneförrättningens status"
+"task-katselmus.tila.lopullinen" "fi" "Lopullinen"
+"task-katselmus.tila.lopullinen" "sv" "Slutlig"
+"task-katselmus.tila.osittainen" "fi" "Osittainen"
+"task-katselmus.tila.osittainen" "sv" "Delvis"
 "task-katselmus.katselmus.huomautukset.kuvaus" "fi" "Huomautettavaa"
 "task-katselmus.katselmus.huomautukset.kuvaus" "sv" "Anmärkningsvärt"
 "task-katselmus.katselmus.huomautukset.maaraAika" "fi" "Määräaika"
